# scraping_for_nit

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
src/: main.rs
