[package]
name = "scraping_for_nit"
version = "0.1.0"
edition = "2021"

[dependencies]
scraper = "0.19.0"
tokio = { version = "1.38.0", features = ["rt-multi-thread", "macros"] }
reqwest = { version = "0.12.5" }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
rand = "0.8.5"
clap = { version = "4.5.9", features = ["derive"] }
